--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <title>Document</title>
 </head>
 <body>
+   <div class="header">Заголовок</div>
    <script src="script.js" async defer></script>
 </body>
 </html>
