--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
    <div class="header">Заголовок</div>
-   <script src="script.js" async defer></script>
+   <!-- <script src="script.js" async defer></script> -->
+   <script src="number.js"></script>
 </body>
 </html>
